fix for title and sku alignment on result tile

--- a/packages/nyris-widget/src/styles/success-multiple.scss
+++ b/packages/nyris-widget/src/styles/success-multiple.scss
@@ -217,26 +217,32 @@
 }
 
 .nyris__product {
-  &-title {
-    font-weight: 700;
-    font-size: 12px;
-    color: #2B2C46;
-    padding-left: 8px;
-    max-width: calc(100% - 8px);
-    cursor: pointer;
-    height: 34px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-  }
+  &-info {
+    width: 100%;
+    height: 56px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    &-title {
+      font-weight: 700;
+      font-size: 12px;
+      color: #2B2C46;
+      padding-left: 8px;
+      max-width: calc(100% - 8px);
+      cursor: pointer;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
 
-  &-sku {
-    color: black;
-    font-size: 10px;
-    font-weight: 400;
-    padding-left: 8px;
-    margin: 2px 0 6px 0;
+    &-sku {
+      color: black;
+      font-size: 10px;
+      font-weight: 400;
+      padding-left: 8px;
+      margin: 2px 0 6px 0;
+    }
   }
 
   &-cta {
